; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/lua/src/extr_lvm.c_luaV_tonumber.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/lua/src/extr_lvm.c_luaV_tonumber.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @luaV_tonumber(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i64 @ttisnumber(i32* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = load i32*, i32** %4, align 8
  store i32* %11, i32** %3, align 8
  br label %27

12:                                               ; preds = %2
  %13 = load i32*, i32** %4, align 8
  %14 = call i64 @ttisstring(i32* %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %26

16:                                               ; preds = %12
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @svalue(i32* %17)
  %19 = call i64 @luaO_str2d(i32 %18, i32* %6)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %26

21:                                               ; preds = %16
  %22 = load i32*, i32** %5, align 8
  %23 = load i32, i32* %6, align 4
  %24 = call i32 @setnvalue(i32* %22, i32 %23)
  %25 = load i32*, i32** %5, align 8
  store i32* %25, i32** %3, align 8
  br label %27

26:                                               ; preds = %16, %12
  store i32* null, i32** %3, align 8
  br label %27

27:                                               ; preds = %26, %21, %10
  %28 = load i32*, i32** %3, align 8
  ret i32* %28
}

declare dso_local i64 @ttisnumber(i32*) #1

declare dso_local i64 @ttisstring(i32*) #1

declare dso_local i64 @luaO_str2d(i32, i32*) #1

declare dso_local i32 @svalue(i32*) #1

declare dso_local i32 @setnvalue(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
